# outcast

./: pyproject.toml
examples/: coffee_yield_demo.ipynb
outcast/: __init__.py  _utils.py  base.py  contamination.py  utils.py
outcast/detectors/: linear_regression.py  random_forest.py
tests/: test_detectors.py
